# rin-engine

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  STRUCTURAL_REPORT.md  _cengine.c  bench-all.sh  main.c  pyproject.toml  rin_bspn.h  rin_core.c  rin_dct_engine.h  rin_dptm.h  rin_lif_engine.h  rin_mechanistic_distill.h  rin_ptsoftmax.h  setup.py  thorin_api.c
.github/workflows/: ci.yml
experimental/: README.md
experimental/rin-x/: rin_x.c  rin_x.h  rin_x_native.c  rinx_avx2_ultra.c  rinx_batch.c  rinx_extreme_opt.c  rinx_fp32_full.c  (+19 more)
lib/: BHRR_ADR.md
rin/: __init__.py  __main__.py  _backend.py  _rin_native.py
scripts/: comprehensive_energy_analysis.py  demo_final_integrada.py  download_gsm8k.py  export_fused_weights.py  final_benchmark.py  final_comparison_analysis.py  generate_test_model.py  onnx_benchmark.py  pack_weights_24.py  pytorch_baseline.py  pytorch_energy_meter.py  rapl_meter_pytorch.py  resnet18_rin.py  rigorous_validation.py  rin_x_pruning_train.py  test_final_integrado.py  test_final_validacion.py  test_honesto.py  tiny_rin_quality_check.py  tiny_rin_test_samples.json  tiny_rin_train.py  tiny_rin_validate.c  tiny_rin_weights.json  train_bhrr.py  train_bhrr_fast.py  train_fast_qat.py  train_genius.py  train_genius_fast.py  train_mlp_fixed.py  train_mlp_qat.py  train_mlp_simple.py  train_qat_int8.py  train_snn_tiny_sparse.py  train_softmax_baseline.py  train_tiny_gpt.py  triple_benchmark.py  validate_end_to_end.py
tests/: test_engine.py  test_import.py
thorin/: __init__.py  __main__.py  _backend.py  _thor_native.py
(+69 files in other folders)
