[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "thorin"
version = "1.0.0"
description = "THORIN - Experimental Neural Inference Runtime"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "THOR Team"}]
requires-python = ">=3.8"
dependencies = ["numpy"]

[project.urls]
Source = "https://github.com/thor-ai/thorin"

[project.scripts]
thorin = "thorin.cli.main:main"
